Fixing jvm options